--- a/Page(3)/Style-page(3).scss
+++ b/Page(3)/Style-page(3).scss
@@ -22,7 +22,7 @@ body {
 }
 .container {
     background-color: #FFEDF5;
-    background-image: url("./img/Group\ 2994.svg");
+    background-image: url("../img/Group\ 2994.svg");
     
     .c_middle {
         // width: 68.5%;
