--- a/Page(3)/Style-page(3).css
+++ b/Page(3)/Style-page(3).css
@@ -31,7 +31,7 @@ body {
 
 .container {
   background-color: #FFEDF5;
-  background-image: url("./img/Group 2994.svg");
+  background-image: url("../img/Group 2994.svg");
 }
 
 .container .c_middle .cm_top {
