--- a/Page(5)/Style.css
+++ b/Page(5)/Style.css
@@ -17,149 +17,10 @@ body {
 }
 
 .container .c_middle {
-  margin: 0 auto;
-  height: 38%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 68.5%;
   background-color: #FFFFFF;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 80px;
-  margin-bottom: 185px;
-}
-
-.container .c_middle .cm_tittle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 4rem;
-  margin-bottom: 2.5rem;
-}
-
-.container .c_middle .cm_tittle .cmt_text {
-  margin-left: 1rem;
-}
-
-.container .c_middle .cm_tittle .cmt_text .text_big {
-  color: #E03145;
-  margin-bottom: 0.3rem;
-}
-
-.container .c_middle .cm_tittle .cmt_text .text_small {
-  color: #393939;
-}
-
-.container .c_middle .cm_information {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 79%;
-  height: 17%;
-  background-color: #FFF0F2;
-  border: 1px solid #FFC6CD;
-  margin-bottom: 2rem;
   border-radius: 5px;
-}
-
-.container .c_middle .cm_information .cmi_text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 70%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 1.5rem;
-}
-
-.container .c_middle .cm_information .cmi_text .text_left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.container .c_middle .cm_information .cmi_text .text_left .text {
-  margin-right: 2.5rem;
-}
-
-.container .c_middle .cm_information .cmi_text .text_left .number {
-  color: #E03145;
-}
-
-.container .c_middle .cm_information .cmi_text .text_right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.container .c_middle .cm_information .cmi_text .text_right .text {
-  margin-right: 2.5rem;
-}
-
-.container .c_middle .cm_information .cmi_text .text_right .number {
-  font-weight: bold;
-}
-
-.container .c_middle .cm_information .cmi_recipe {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 1.5rem;
-  margin-top: 1rem;
-}
-
-.container .c_middle .cm_information .cmi_recipe .text_price {
-  margin-right: 2.5rem;
-}
-
-.container .c_middle .cm_information .cmi_recipe .recipe {
-  font-weight: bold;
-}
-
-.container .c_middle .cm_information .cmi_recipe .recipe .r_img {
-  width: 10px;
-  height: 10px;
-}
-
-.container .c_middle .cm_row {
-  width: 79%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.container .c_middle .cm_row .cmr_boder {
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -173,76 +34,73 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #FFF0F2;
-  border: 1px solid #FFC6CD;
-  border-radius: 5px;
 }
 
-.container .c_middle .cm_row .cmr_boder .text {
-  margin-top: 1.6rem;
-  margin-bottom: 0.4rem;
+.container .c_middle .cm_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 4.4rem;
+  margin-top: 4.5rem;
 }
 
-.container .c_middle .cm_row .cmr_boder .number {
-  color: #E03145;
+.container .c_middle .cm_title .cmt_text {
+  margin-left: 1.5rem;
+}
+
+.container .c_middle .cm_title .cmt_text .text_faqs {
   font-size: 1.8rem;
   font-weight: bold;
+  margin-bottom: 0.5rem;
+  color: #E03145;
 }
 
-.container .c_middle .cm_row .cmr_boder .boder_harvest {
-  background-color: #E34557;
-  margin-top: 1.1rem;
-  margin-bottom: 1.5rem;
-  width: 9.8rem;
-  height: 2.8rem;
+.container .c_middle .cm_content {
+  width: 66%;
+}
+
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_question {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 5px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-top: 1px solid #FFC6CD;
 }
 
-.container .c_middle .cm_row .cmr_boder .boder_harvest .harvest {
-  color: #FFFFFF;
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_question .question_text {
+  font-weight: bold;
+  margin-top: 0.75rem;
+  margin-bottom: 1rem;
 }
 
-.container .c_middle .cm_row .cmr_boder .boder_harvest:hover {
-  background-color: #f8d1e2;
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_question .question_img {
+  margin-top: 0.75rem;
+  margin-bottom: 1rem;
 }
 
-.container .c_middle .cm_unstake {
-  width: 12.8rem;
-  height: 2.8rem;
-  background-color: #E34557;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 5px;
-  margin-top: 25px;
-  margin-bottom: 64px;
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_question .question_text:hover {
+  color: #E03145;
 }
 
-.container .c_middle .cm_unstake .cmu_text {
-  color: #FFFFFF;
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_question .text_question {
+  font-weight: bold;
+  margin-top: 0.75rem;
+  margin-bottom: 1rem;
 }
 
-.container .c_middle .cm_unstake:hover {
-  background-color: #f8d1e2;
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_answer {
+  background-color: #FFF0F2;
+  border-bottom: 1px solid #FFC6CD;
+}
+
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_answer .answer_text {
+  padding: 1rem 1.5rem;
+}
+
+.container .c_middle .cm_content .cmc_row .cmcr_border .cmcrb_answer .text_bott {
+  margin-bottom: 12.5rem;
 }
 
 .container .c_footer {
@@ -368,15 +226,6 @@ body {
     width: 11px;
     height: 7px;
   }
-  .c_middle {
-    width: 56%;
-  }
-  .c_middle .cmr_boder {
-    width: 32%;
-  }
-  .c_middle .cm_tittle .text_big {
-    font-size: 2rem;
-  }
   .c_footer .text_smart {
     margin: 0 48px;
   }
@@ -470,15 +319,6 @@ body {
     width: 11px;
     height: 7px;
   }
-  .c_middle {
-    width: 82%;
-  }
-  .c_middle .cmr_boder {
-    width: 32%;
-  }
-  .c_middle .cm_tittle .text_big {
-    font-size: 2rem;
-  }
   .c_footer .cfw_between {
     margin: 0 15px;
   }
@@ -496,40 +336,6 @@ body {
   }
   .c_menu .img_menu {
     margin: 20px 0 0 20px;
-  }
-  .c_middle {
-    width: 90%;
-  }
-  .c_middle .cm_tittle .text_big {
-    font-size: 1.3rem;
-  }
-  .c_middle .cm_information .cmi_text {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .c_middle .cm_information .cmi_recipe {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .c_middle .cm_row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .c_middle .cm_row .cmr_boder {
-    width: 60%;
-    margin-bottom: 2rem;
   }
   .c_footer .cf_wrap {
     -webkit-box-orient: vertical;
