--- a/Page(5)/Style.scss
+++ b/Page(5)/Style.scss
@@ -12,157 +12,77 @@ body {
     background-image: url("../img/Group\ 2994.svg");
     width: 100%;
     height: 100%;
-    
     .c_middle {
-        margin: 0 auto;
-        // width: 56%;
-        height: 38%;
-        display: flex;
+        width: 68.5%;
         background-color: #FFFFFF;
-        flex-direction: column;
+        border-radius: 5px;
+        margin: 0 auto;
+        display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 80px;
-        margin-bottom: 185px;
-        .cm_tittle {
+        flex-direction: column;
+        .cm_title {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 4rem;
-            margin-bottom: 2.5rem;
-            // .cmt_img {
-            //     width: 6%;
-            //     height: 10%;
-            // }
+            margin-bottom: 4.4rem;
+            margin-top: 4.5rem;
             .cmt_text {
-                margin-left: 1rem;
-                .text_big {
-                    color: #E03145;
-                    margin-bottom: 0.3rem;
-                }
-                .text_small {
-                    color: #393939;
-                }
-            }
-        }
-        .cm_information {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 79%;
-            height: 17%;
-            background-color: #FFF0F2;
-            border: 1px solid #FFC6CD ;
-            margin-bottom: 2rem;
-            border-radius: 5px;
-            .cmi_text {
-                display: flex;
-                width: 70%;
-                justify-content: space-between;
-                align-items: center;
-                margin-top: 1.5rem;
-
-                .text_left {
-                    display: flex;
-                    .text {
-                        margin-right: 2.5rem;
-                    }
-                    .number {
-                        color: #E03145;
-                    }
-                }
-                .text_right {
-                    display: flex;
-                    .text {
-                        margin-right: 2.5rem;
-                    }
-                    .number {
-                        font-weight: bold;
-                    }
-                }
-            }
-            .cmi_recipe {
-                display: flex;
-                margin-bottom: 1.5rem;
-                margin-top: 1rem;
-                .text_price {
-                    margin-right: 2.5rem;
-                }
-                .recipe {
-                    font-weight: bold;
-                    .r_img {
-                        width: 10px;
-                        height: 10px;
-                    }
-                }
-            }
-        }
-
-        .cm_row {
-            width: 79%;
-            display: flex;
-            justify-content: space-between;
-            .cmr_boder {
-                // width: 32%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                background-color: #FFF0F2;
-                border: 1px solid #FFC6CD;
-                border-radius: 5px;
-                .text {
-                    margin-top: 1.6rem;
-                    margin-bottom: 0.4rem;
-                }
-                .number {
-                    color: #E03145;
+                margin-left: 1.5rem;
+                .text_faqs {
                     font-size: 1.8rem;
                     font-weight: bold;
+                    margin-bottom: 0.5rem;
+                    color: #E03145;
                 }
-                .boder_harvest {
-                    background-color: #E34557;
-                    margin-top: 1.1rem;
-                    margin-bottom: 1.5rem;
-                    width: 9.8rem;
-                    height: 2.8rem;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: 5px;
-                    .harvest {
-                        color: #FFFFFF;
-                        
+                // .text_welcome {
+
+                // }
+            }
+        }
+        .cm_content {
+            width: 66%;
+            .cmc_row {
+                .cmcr_border{
+                    .cmcrb_question {
+                        display: flex;
+                        justify-content: space-between;
+                        border-top: 1px solid #FFC6CD;
+
+                        .question_text {
+                            // color: #E03145;
+                            font-weight: bold;
+                            margin-top: 0.75rem;
+                            margin-bottom: 1rem;
+                        }
+                        .question_img {
+                            margin-top: 0.75rem;
+                            margin-bottom: 1rem;
+                        }
+                        .question_text:hover {
+                            color: #E03145;
+                        }
+
+                        .text_question {
+                            font-weight: bold;
+                            margin-top: 0.75rem;
+                            margin-bottom: 1rem;
+                        }
+                    }
+                    .cmcrb_answer {
+                        background-color: #FFF0F2;
+                        border-bottom: 1px solid #FFC6CD;
+                        // width: 100%;
+                        .answer_text {
+                            // width: 94%;
+                            padding: 1rem 1.5rem;
+                        }
+                        .text_bott {
+                            margin-bottom: 12.5rem;
+                        }
                     }
                 }
-                .boder_harvest:hover {
-                    background-color: #f8d1e2;
-                    cursor: grabbing;
-                }
             }
-        }
-        .cm_unstake {
-            width: 12.8rem;
-            height: 2.8rem;
-            background-color: #E34557;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 5px;
-            margin-top: 25px;
-            margin-bottom: 64px;
-            .cmu_text {
-                color: #FFFFFF;
-            }
-        }
-        .cm_unstake:hover {
-            background-color: #f8d1e2;
-            cursor: grabbing;
         }
     }
-    
-    
     .c_footer {
         background-color: #393939;
         margin-top: 107px;
@@ -270,18 +190,7 @@ body {
             }
         }
     }
-    .c_middle {
-        width: 56%;
-        .cmr_boder {
-            width: 32%;
-        }
-        .cm_tittle {
-            .text_big {
-                font-size: 2rem;
-            }
-        }
-        
-    }
+   
     .c_footer {
         .text_smart {
             margin: 0 48px;
@@ -368,17 +277,7 @@ body {
             }
         }
     }
-    .c_middle {
-        width: 82%;
-        .cmr_boder {
-            width: 32%;
-        }
-        .cm_tittle {
-            .text_big {
-                font-size: 2rem;
-            }
-        }
-    }
+
     .c_footer {
         .cfw_between {
             margin: 0 15px;
@@ -399,32 +298,6 @@ body {
         .img_menu {
             margin: 20px 0 0 20px;
         }
-    }
-    .c_middle {
-        width: 90%;
-        .cm_tittle {
-            .text_big {
-                font-size: 1.3rem;
-            }
-        }
-        .cm_information {
-            .cmi_text {
-                flex-direction: column;
-            }
-            .cmi_recipe {
-                flex-direction: column;
-            }
-        }
-        .cm_row {
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            .cmr_boder {
-                width: 60%;
-                margin-bottom: 2rem;
-            }
-        }
-        
     }
     .c_footer {
         
