--- a/Page(4)/Style.css
+++ b/Page(4)/Style.css
@@ -14,6 +14,7 @@ body {
   background-image: url("../img/Group 2994.svg");
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .container .c_middle {
@@ -283,6 +284,306 @@ body {
   display: flex;
 }
 
+.container .c_deposit {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #0d0403b6;
+  top: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.container .c_deposit .cd_border {
+  background-color: #FFFFFF;
+  border-top: 1rem solid #4EAD60;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.container .c_deposit .cd_border .cdb_header {
+  position: absolute;
+  top: -75px;
+}
+
+.container .c_deposit .cd_border .cdb_header .cdbh_circle {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .c_deposit .cd_border .cdb_header .cdbh_circle .cdbhc_img {
+  width: 7rem;
+  height: 5rem;
+  margin-top: 1.5rem;
+}
+
+.container .c_deposit .cd_border .cdb_close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.container .c_deposit .cd_border .cdb_content {
+  z-index: 1;
+  margin-top: 5rem;
+  width: 50%;
+}
+
+.container .c_deposit .cd_border .cdb_content .text_deposit {
+  text-align: center;
+  font-weight: bold;
+  color: #3A3A3A;
+}
+
+.container .c_deposit .cd_border .cdb_content .text_input {
+  margin-top: 40px;
+}
+
+.container .c_deposit .cd_border .cdb_content .cdbc_input {
+  width: 100%;
+  border: 1px solid #3C2B34;
+  border-radius: 5px;
+  margin: 0.8rem 0;
+}
+
+.container .c_deposit .cd_border .cdb_content .cdbc_input input {
+  width: 90%;
+  height: 2rem;
+  border: none;
+  margin-left: 5px;
+  outline: none;
+}
+
+.container .c_deposit .cd_border .cdb_content .text_hello {
+  margin-bottom: 3.1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.container .c_deposit .cd_border .cdb_content .text_hello .text {
+  font-weight: bold;
+  color: #3A3A3A;
+}
+
+.container .c_deposit .cd_border .cdb_content .text_hello .number {
+  color: #E03145;
+  font-weight: bold;
+}
+
+.container .c_deposit .cd_border .cdb_content .cdbc_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 5.1rem;
+}
+
+.container .c_deposit .cd_border .cdb_content .cdbc_button .button_cancel {
+  background-color: #E0DBD2;
+  width: 46%;
+  height: 2.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 5px;
+}
+
+.container .c_deposit .cd_border .cdb_content .cdbc_button .button_confirm {
+  background-color: #E34557;
+  width: 46%;
+  height: 2.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 5px;
+}
+
+.container .c_deposit .cd_border .cdb_content .cdbc_button .button_cancel:hover, .container .c_deposit .cd_border .cdb_content .cdbc_button .button_confirm:hover {
+  opacity: 0.8;
+}
+
+.container .c_warning {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #0d0403b6;
+  top: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.container .c_warning .cw_border {
+  background-color: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.container .c_warning .cw_border .img_stripe {
+  height: 0.6rem;
+  width: 100%;
+}
+
+.container .c_warning .cw_border .cwb_header {
+  position: absolute;
+  top: -75px;
+}
+
+.container .c_warning .cw_border .cwb_header .cwbh_circle {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .c_warning .cw_border .cwb_header .cwbh_circle .cwbhc_img {
+  width: 7rem;
+  height: 5rem;
+  margin-top: 1.5rem;
+}
+
+.container .c_warning .cw_border .cwb_close {
+  position: absolute;
+  top: 2rem;
+  right: 1rem;
+}
+
+.container .c_warning .cw_border .cwb_content {
+  z-index: 1;
+  margin-top: 5rem;
+  width: 54%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.container .c_warning .cw_border .cwb_content .text_warning {
+  font-weight: bold;
+  margin-bottom: 2.5rem;
+}
+
+.container .c_warning .cw_border .cwb_content .text_you {
+  width: 96%;
+}
+
+.container .c_warning .cw_border .cwb_content .text_please {
+  margin-top: 0.8rem;
+  margin-bottom: 3.2rem;
+}
+
+.container .c_warning .cw_border .cwb_content .text_please a {
+  color: #E03145;
+}
+
+.container .c_warning .cw_border .cwb_content .cwbc_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 5.4rem;
+}
+
+.container .c_warning .cw_border .cwb_content .cwbc_button .button_close {
+  background-color: #E34557;
+  width: 60%;
+  height: 2.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 5px;
+}
+
+.container .c_warning .cw_border .cwb_content .cwbc_button .button_close:hover {
+  opacity: 0.8;
+}
+
 @media only screen and (min-width: 1200px) {
   .c_menu {
     display: none;
@@ -383,6 +684,15 @@ body {
   .c_footer .twitter {
     margin: 0 45px;
   }
+  .c_deposit .cd_border {
+    width: 37%;
+  }
+  .c_warning .cw_border {
+    width: 37%;
+  }
+  .c_warning .cw_border .text_warning {
+    font-size: 1.9rem;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199.5px) {
@@ -476,6 +786,9 @@ body {
   .c_middle .cmr_boder {
     width: 32%;
   }
+  .c_middle .cmr_boder .text_deposit {
+    font-size: 1.9rem;
+  }
   .c_middle .cm_tittle .text_big {
     font-size: 2rem;
   }
@@ -487,6 +800,18 @@ body {
   }
   .c_footer .twitter {
     margin: 0 45px;
+  }
+  .c_deposit .cd_border {
+    width: 60%;
+  }
+  .c_deposit .cd_border .text_deposit {
+    font-size: 1.9rem;
+  }
+  .c_warning .cw_border {
+    width: 60%;
+  }
+  .c_warning .cw_border .text_warning {
+    font-size: 1.9rem;
   }
 }
 
@@ -528,7 +853,7 @@ body {
             align-items: center;
   }
   .c_middle .cm_row .cmr_boder {
-    width: 60%;
+    width: 90%;
     margin-bottom: 2rem;
   }
   .c_footer .cf_wrap {
@@ -545,6 +870,30 @@ body {
   }
   .c_footer .cf_wrap .twitter {
     margin: 0 10px;
+  }
+  .c_deposit .cd_border {
+    width: 70%;
+  }
+  .c_deposit .cd_border .text_deposit {
+    font-size: 1.2rem;
+  }
+  .c_deposit .text_hello .text {
+    font-size: 10px;
+  }
+  .c_deposit .text_hello .number {
+    font-size: 10px;
+  }
+  .c_deposit .button_cancel {
+    font-size: 12px;
+  }
+  .c_deposit .button_confirm {
+    font-size: 12px;
+  }
+  .c_warning .cw_border {
+    width: 70%;
+  }
+  .c_warning .cw_border .text_warning {
+    font-size: 1.2rem;
   }
 }
 /*# sourceMappingURL=Style.css.map */
