--- a/Page(4)/Style.scss
+++ b/Page(4)/Style.scss
@@ -7,12 +7,19 @@ body {
     margin: 0;
     padding: 0;
 }
+// input:active,input:focus {
+//     border: none;
+//     // outline: none;
+// }
+// input {
+//     border: none;
+// }
 .container {
     background-color: #FFEDF5;
     background-image: url("../img/Group\ 2994.svg");
     width: 100%;
     height: 100%;
-    
+    position: relative;
     .c_middle {
         margin: 0 auto;
         // width: 56%;
@@ -190,6 +197,221 @@ body {
             }
         }
     }
+
+    .c_deposit {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #0d0403b6 ;
+        top: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: none;
+        // opacity: 0.84;
+        .cd_border {
+            // width: 37%;
+            // height: 41%;
+            background-color: #FFFFFF;
+            border-top: 1rem solid #4EAD60;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            .cdb_header {
+            position: absolute; 
+            top: -75px;
+                .cdbh_circle {
+                    width: 10rem;
+                    height: 10rem;
+                    border-radius: 50%;
+                    background-color: white;
+                    display: flex;
+                    justify-content: center;
+                    // align-items: center;
+                    .cdbhc_img {
+                        width:7rem;
+                        height: 5rem;
+                        margin-top: 1.5rem;
+                        // margin-top: 1rem;
+                    }
+                }
+            }
+            .cdb_close {
+                position: absolute;
+                top: 1rem;
+                right: 1rem;              
+            }
+            .cdb_content {
+                z-index: 1;
+                margin-top: 5rem;
+                width: 50%;
+                // display: flex;
+                // flex-direction: column;
+                .text_deposit {
+                    // font-size: 1.9rem;
+                    // margin: 0 auto;
+                    text-align: center;
+                    font-weight: bold;
+                    color: #3A3A3A;
+                }
+                .text_input {
+                    margin-top: 40px;
+                }
+                .cdbc_input {
+                    width: 100%;
+                    border: 1px solid #3C2B34;
+                    border-radius: 5px;
+                    margin: 0.8rem 0;
+                    input {
+                        width: 90%;
+                        height: 2rem;
+                        border: none;
+                        margin-left: 5px;
+                        outline: none;
+                    }
+                    
+                }
+                .text_hello {
+                    margin-bottom: 3.1rem;
+                    display: flex;
+                    justify-content: flex-end;
+                    .text {
+                        font-weight: bold;
+                        color: #3A3A3A;
+                    }
+                    .number {
+                        color: #E03145;
+                        font-weight: bold;
+                    }
+                }
+                .cdbc_button {
+                    display: flex;
+                    width: 100%;
+                    justify-content: space-between;
+                    margin-bottom: 5.1rem;
+                    .button_cancel {
+                        background-color: #E0DBD2;
+                        width: 46%;
+                        height: 2.75rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 5px;
+                    }
+                    .button_confirm {
+                        background-color: #E34557;
+                        width: 46%;
+                        height: 2.75rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 5px;
+                    }
+                    .button_cancel:hover, .button_confirm:hover {
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
+    }
+
+    .c_warning {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #0d0403b6 ;
+        top: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: none;
+        // opacity: 0.84;
+        .cw_border {
+            // width: 37%;
+            // height: 41%;
+            background-color: #FFFFFF;
+            // border-top: 1rem solid rgb(255, 187, 0);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            
+            .img_stripe {
+                height: 0.6rem;
+                width: 100%;
+            }
+            
+            .cwb_header {
+            position: absolute; 
+            top: -75px;
+                .cwbh_circle {
+                    width: 10rem;
+                    height: 10rem;
+                    border-radius: 50%;
+                    background-color: white;
+                    display: flex;
+                    justify-content: center;
+                    // align-items: center;
+                    .cwbhc_img {
+                        width:7rem;
+                        height: 5rem;
+                        margin-top: 1.5rem;
+                        // margin-top: 1rem;
+                    }
+                }
+            }
+            .cwb_close {
+                position: absolute;
+                top: 2rem;
+                right: 1rem;              
+            }
+            .cwb_content {
+                z-index: 1;
+                margin-top: 5rem;
+                width: 54%;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                .text_warning {
+                    // font-size: 1.9rem;
+                    font-weight: bold;
+                    margin-bottom: 2.5rem;
+                }
+                .text_you {
+                    width: 96%;
+                }
+                .text_please {
+                    margin-top: 0.8rem;
+                    margin-bottom: 3.2rem;
+                    a {
+                        color: #E03145;
+                    }
+                }
+                .cwbc_button {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-bottom: 5.4rem;
+                    // width: 100%;
+                    .button_close {
+                        background-color: #E34557;
+                        width: 60%;
+                        height: 2.75rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 5px;                        
+                    }
+                    .button_close:hover {
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
+    }
 }
 @media only screen and (min-width: 1200px) {
     .c_menu {
@@ -290,6 +512,19 @@ body {
             margin: 0 45px;
         }
     }
+    .c_deposit {
+        .cd_border {
+            width: 37%;
+        }
+    }
+    .c_warning {
+        .cw_border {
+            width: 37%;
+            .text_warning {
+                font-size: 1.9rem;
+            }
+        }
+    }
 }
 @media only screen and (min-width: 768px) and (max-width: 1199.5px) {
     .c_menu {
@@ -372,6 +607,9 @@ body {
         width: 82%;
         .cmr_boder {
             width: 32%;
+            .text_deposit {
+                font-size: 1.9rem;
+            }
         }
         .cm_tittle {
             .text_big {
@@ -388,6 +626,22 @@ body {
         }
         .twitter {
             margin: 0 45px;
+        }
+    }
+    .c_deposit {
+        .cd_border {
+            width: 60%;
+            .text_deposit {
+                font-size: 1.9rem;
+            }
+        }
+    }
+    .c_warning {
+        .cw_border {
+            width: 60%;
+            .text_warning {
+                font-size: 1.9rem;
+            }
         }
     }
 }
@@ -420,7 +674,7 @@ body {
             justify-content: center;
             align-items: center;
             .cmr_boder {
-                width: 60%;
+                width: 90%;
                 margin-bottom: 2rem;
             }
         }
@@ -438,6 +692,36 @@ body {
             }
             .twitter {
                 margin: 0 10px;
+            }
+        }
+    }
+    .c_deposit {
+        .cd_border {
+            width: 70%;
+            .text_deposit {
+                font-size: 1.2rem;
+            }
+        }
+        .text_hello {
+            .text {
+                font-size: 10px;
+            }
+            .number {
+                font-size: 10px;
+            }
+        }
+        .button_cancel {
+            font-size: 12px;
+        }
+        .button_confirm {
+            font-size: 12px;
+        }
+    }
+    .c_warning {
+        .cw_border {
+            width: 70%;
+            .text_warning {
+                font-size: 1.2rem;
             }
         }
     }
